...
  @override
  Widget build(BuildContext context) {
    return Scaffold(
      appBar: AppBar(
        backgroundColor: Theme.of(context).colorScheme.primary,
        title: Text(
          'Search',
          style: TextStyle(
            color: Theme.of(context).colorScheme.secondary,
            fontWeight: FontWeight.bold,
          ),
        ),
      ),
...
    FocusNode focusNode,
    BuildContext context,
  ) {
    return SearchBar(
      controller: textController,
      focusNode: focusNode,
      hintText: 'Search news...',
      leading: const Icon(Icons.search),
      trailing: [buildClearSearchButton()],
      elevation: WidgetStateProperty.all(2),
      padding: WidgetStateProperty.all(
        const EdgeInsets.symmetric(horizontal: 16),
      ),
...
    return Obx(() {
      if (!controller.hasText.value) {
        return const SizedBox.shrink();
      }
      return IconButton(
        icon: Semantics(
          label: "Clear search",
          button: true,
          child: const Icon(Icons.clear),
        ),
        onPressed: controller.clearSearch,
      );
    });
...
