...
                ),
                activeIcon: const Icon(Icons.home),
                label: 'Home',
              ),
              BottomNavigationBarItem(
                icon: Semantics(
                  label: 'Search tab',
                  button: true,
                  child: const Icon(Icons.search_outlined),
                ),
                activeIcon: const Icon(Icons.saved_search),
                label: 'Search',
              ),
...
